src/objects/ACCL__Job_Definition_Template__c.object
<CustomObject>
    <description>Holds the definition of questions / product surveys that are available in the system.</description>
    <fields>
        <fullName>ACCL__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Max_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consider Max Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Consider_Min_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consider Min Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Data_Type__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Data Type</label>
        <referenceTo>ACCL__Data_Type__c</referenceTo>
        <relationshipLabel>Job Definition Templates</relationshipLabel>
        <relationshipName>Job_Definition_Templates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <formula>CASE($User.ACCL__Language_Postfix__c,
      &quot;Language1&quot;, ACCL__Description_Language_1__c,
      &quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c),
      &quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c),
      &quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),
      ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Job_Template__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Job Template</label>
        <referenceTo>ACCL__Job_Template__c</referenceTo>
        <relationshipLabel>Job Definition Templates</relationshipLabel>
        <relationshipName>Job_Definition_Templates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Max_Date_Policy__c</fullName>
        <description>Controls validation of date fields when answering questions or surveys on CAS OnPremise mobile devices</description>
        <label>Max Date Policy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MinDate</fullName>
                </value>
                <value>
                    <fullName>MaxDate</fullName>
                </value>
                <value>
                    <fullName>Today</fullName>
                </value>
                <value>
                    <fullName>NextYear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Max_Value__c</fullName>
        <label>Max Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Measure_Type__c</fullName>
        <label>Measure Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Store</fullName>
                    <default>true</default>
                    <label>Store</label>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Min_Date_Policy__c</fullName>
        <description>Controls validation of date fields when answering questions or surveys on CAS OnPremise mobile devices</description>
        <label>Min Date Policy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MinDate</fullName>
                </value>
                <value>
                    <fullName>MaxDate</fullName>
                </value>
                <value>
                    <fullName>Today</fullName>
                </value>
                <value>
                    <fullName>NextYear</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Min_Value__c</fullName>
        <label>Min Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Perfect_Store_Question__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if question must be considered relevant for perfect store index determination of a call.</description>
        <inlineHelpText>Defines if question must be considered relevant for perfect store index determination of a call.</inlineHelpText>
        <label>Perfect Store Question</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Picture_Taking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Picture Taking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Presetting__c</fullName>
        <label>Presetting</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>LastValue</fullName>
                </value>
                <value>
                    <fullName>TargetValue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Primary_Survey_Policy__c</fullName>
        <description>Allows specification of three primary product survey questions used for discrepancy survey in a matrix like display on the CAS OnPremise mobility devices.
      Supported survey questions: Facings, Price, Distribution</description>
        <label>Primary Survey Policy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facings</fullName>
                </value>
                <value>
                    <fullName>PriceSurvey</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Product_Reference__c</fullName>
        <formula>ACCL__Job_Template__r.ACCL__Product_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Reference</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org__c</fullName>
        <label>Sales Org</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Save_Presetting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Save Presetting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Short_Description_Language_1__c</fullName>
        <description>No longer in use</description>
        <label>Short Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Short_Description_Language_2__c</fullName>
        <description>No longer in use</description>
        <label>Short Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Short_Description_Language_3__c</fullName>
        <description>No longer in use</description>
        <label>Short Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Short_Description__c</fullName>
        <description>No longer in use</description>
        <formula>CASE($User.ACCL__Language_Postfix__c,
      &quot;Language1&quot;, ACCL__Short_Description_Language_1__c,
      &quot;Language2&quot;, BLANKVALUE(ACCL__Short_Description_Language_2__c,ACCL__Short_Description_Language_1__c),
      &quot;Language3&quot;, BLANKVALUE(ACCL__Short_Description_Language_3__c,ACCL__Short_Description_Language_1__c),
      &quot;Language4&quot;, BLANKVALUE(ACCL__Short_Description_Language_4__c,ACCL__Short_Description_Language_1__c),
      ACCL__Short_Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Short Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sort__c</fullName>
        <description>Used for sorting, e.g. when manually adding questions during call execution on CAS OnPremise mobile solution</description>
        <label>Sort</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ACCL__Step_Size__c</fullName>
        <description>Controls stepper for numeric fields when answering questions or surveys on CAS OnPremise mobile devices</description>
        <label>Step Size</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ACCL__Survey_Identification__c</fullName>
        <description>This field is used by mobility to store survey identification values</description>
        <label>Survey Identification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facings</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Distribution</fullName>
                </value>
                <value>
                    <fullName>POS Facings</fullName>
                </value>
                <value>
                    <fullName>POS Price</fullName>
                </value>
                <value>
                    <fullName>POS Distribution</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Target_Value_Column__c</fullName>
        <description>Specifies the source for target values, if required, taken from authorization list.
      Target values are used as presetting of product survey answers for carrying out discrepancy surveys.</description>
        <label>Target Value Column</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Use_Stepper__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls stepper for numeric fields when answering questions or surveys on CAS OnPremise mobile devices</description>
        <label>Use Stepper</label>
        <type>Checkbox</type>
    </fields>
    <label>Job Definition Template</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Active__c</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Job_Template__c</columns>
        <columns>ACCL__Sales_Org__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>POS_Questions</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Target_Value_Column__c</columns>
        <columns>ACCL__Max_Value__c</columns>
        <columns>ACCL__Min_Value__c</columns>
        <columns>ACCL__Data_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCL__Measure_Type__c</field>
            <operation>equals</operation>
            <value>POS</value>
        </filters>
        <label>POS Questions</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Job Definition Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Definition Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>ACCL__Avoid_POS_Surveys</fullName>
        <active>true</active>
        <errorConditionFormula>TEXT(ACCL__Measure_Type__c) == &apos;POS&apos; &amp;&amp; ACCL__Job_Template__r.ACCL__Product_Reference__c==true</errorConditionFormula>
        <errorMessage>POS Surveys can&apos;t be created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Check_If_Sales_Org_Is_Changed</fullName>
        <active>true</active>
        <description>The Sales Org can&apos;t be edited after Job Definition Template creation.</description>
        <errorConditionFormula>ISCHANGED(ACCL__Sales_Org__c)</errorConditionFormula>
        <errorMessage>The Sales Org can&apos;t be edited after Job Definition Template creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Consider_Max_Value</fullName>
        <active>true</active>
        <description>The Max Value can&apos;t be empty.</description>
        <errorConditionFormula>ACCL__Consider_Max_Value__c &amp;&amp;
      ISNULL(ACCL__Max_Value__c)</errorConditionFormula>
        <errorDisplayField>ACCL__Max_Value__c</errorDisplayField>
        <errorMessage>The Max Value can&apos;t be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Consider_Min_Value</fullName>
        <active>true</active>
        <description>The Min Value can&apos;t be empty.</description>
        <errorConditionFormula>ACCL__Consider_Min_Value__c &amp;&amp; ISNULL(ACCL__Min_Value__c)</errorConditionFormula>
        <errorDisplayField>ACCL__Min_Value__c</errorDisplayField>
        <errorMessage>The Min Value can&apos;t be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Consider_Value</fullName>
        <active>true</active>
        <description>If both Consider Min Value and Consider Max Value are used:
      MinValue &lt;= MaxValue</description>
        <errorConditionFormula>ACCL__Consider_Min_Value__c &amp;&amp;
      ACCL__Consider_Max_Value__c &amp;&amp;
      ACCL__Min_Value__c &gt; ACCL__Max_Value__c</errorConditionFormula>
        <errorMessage>The Min Value must be lower or equal than Max Value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Data_Type_Job_Template</fullName>
        <active>true</active>
        <description>The Data Type and the Job Template can&apos;t be edited after Job Definition Template creation.</description>
        <errorConditionFormula>ISCHANGED(ACCL__Data_Type__c) || ISCHANGED(ACCL__Job_Template__c)</errorConditionFormula>
        <errorMessage>The Data Type and the Job Template can&apos;t be edited after Job Definition Template creation.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Description</fullName>
        <active>false</active>
        <description>You must select at least one Lenguage Dependet Field.</description>
        <errorConditionFormula>ISBLANK(ACCL__Description_Language_1__c)
      &amp;&amp;
      ISBLANK(ACCL__Description_Language_2__c)
      &amp;&amp;
      ISBLANK(ACCL__Description_Language_3__c)</errorConditionFormula>
        <errorMessage>You must select at least one Lenguage Dependet Field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Picture_Taking_Not_Allowed</fullName>
        <active>true</active>
        <description>Picture Taking can only be selected if the related Job Template is &apos;Question&apos;.</description>
        <errorConditionFormula>ACCL__Picture_Taking__c  &amp;&amp;  ACCL__Job_Template__r.Name  &lt;&gt; &apos;Question&apos;</errorConditionFormula>
        <errorDisplayField>ACCL__Picture_Taking__c</errorDisplayField>
        <errorMessage>Picture Taking can only be selected if the related Job Template is &apos;Question&apos;</errorMessage>
    </validationRules>
</CustomObject>